# autonomous-aerospace-simulator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  environment.yaml  pid.yaml  rocket.yaml  training.yaml  visualization.yaml
docs/: api.md  architecture.md  configuration_and_telemetry.md  limitations.md  neural_controller.md  reproducibility.md  rl_environment_plan.md  training_pipeline.md
docs/diagrams/: current_architecture.md  physics_control_loop.md  software_engineering_flow.md  verification_pipeline.md
docs/results/: controller_comparison.md  controller_trajectory_comparison.md  heuristic_v2_report.md  heuristic_v2_summary.csv  heuristic_v2_telemetry.csv  initial_state_vector.csv  landing_experiment.csv  landing_experiment.md  neural_controller_training_report.md  numerical_validation.md  one_step_transition_matrix.csv  throttle_comparison.csv  throttle_comparison.md  trajectory_report.md  trajectory_summary.csv  trajectory_timeseries.csv
scripts/: benchmark_controllers.py  compare_throttle_levels.py  generate_heuristic_landing_v2_report.py  generate_landing_report.py  generate_numerical_validation_report.py  generate_throttle_report.py  generate_trajectory_report.py  plot_controller_benchmark.py  prepare_neural_training_data.py  run_api.py  run_basic_simulation.py  run_heuristic_landing.py  run_heuristic_landing_v2.py  run_landing_experiment.py  run_neural_controller_simulation.py  train_neural_controller.py
src/aerospace_sim/api/: __init__.py  auth.py  execution.py  main.py  schemas.py
src/aerospace_sim/control/: heuristic_landing_controller.py  heuristic_landing_controller_v2.py  neural_controller.py  pid_controller.py
src/aerospace_sim/core/: config_loader.py  state.py  vector3.py
src/aerospace_sim/database/: __init__.py  connection.py  crud.py  models.py
src/aerospace_sim/environment/: landing.py
src/aerospace_sim/evaluation/: __init__.py  controller_benchmark.py
src/aerospace_sim/learning/: __init__.py  neural_controller.py  telemetry_preprocessing.py
src/aerospace_sim/physics/: gravity.py
src/aerospace_sim/simulation/: basic_simulator.py  runner.py  scenario.py
src/aerospace_sim/telemetry/: recorder.py
src/aerospace_sim/vehicle/: engine.py
tests/: test_api.py  test_basic_simulator.py  test_controller_benchmark.py  test_dark_style.py  test_engine.py  test_gravity.py  test_heuristic_controller_v2.py  test_landing_evaluation.py  test_neural_controller.py  test_pid_controller.py  test_scenario.py  test_simulation_runner.py  test_telemetry.py  test_telemetry_preprocessing.py  test_vector3.py
(+5 files in other folders)
