[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-aerospace-simulator"
version = "0.1.0"
description = "Simplified aerospace simulator for rocket landing and autonomous control experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
