[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-aerospace-simulator"
version = "0.1.0"
description = "Simplified aerospace simulator for rocket landing and autonomous control experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.8",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.36",
    "tabulate>=0.10.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]
ml = [
    "scipy>=1.12",
    "torch>=2.3",
    "torchaudio>=2.3",
    "torchvision>=0.18",
    "tqdm>=4.66",
]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
